# opinionated-django

./: .gitignore  README.md
example_project/: pyproject.toml
example_project/src/orders/: admin.py
example_project/src/orders/dtos/: order.py
example_project/src/orders/migrations/: 0001_initial.py  0002_alter_order_options_alter_orderitem_options_and_more.py
example_project/src/orders/models/: order.py
example_project/src/orders/repositories/: order.py
example_project/src/orders/services/: order.py
example_project/src/products/: admin.py
example_project/src/products/dtos/: product.py
example_project/src/products/migrations/: 0001_initial.py  0002_alter_product_options_product_idx_product_name.py
example_project/src/products/models/: product.py
example_project/src/products/repositories/: product.py
example_project/src/products/services/: product.py
example_project/src/project/: asgi.py  ids.py  services.py  settings.py  types.py  urls.py  wsgi.py
example_project/src/project/api/: __init__.py
example_project/src/project/api/orders/: serializers.py  views.py
example_project/src/project/api/products/: serializers.py  views.py
example_project/tests/: conftest.py  test_types.py
example_project/tests/orders/: test_api.py  test_repo.py  test_service.py
example_project/tests/products/: test_api.py  test_repo.py  test_service.py
skills/django-api/: SKILL.md
skills/django-architecture/: SKILL.md
skills/django-cache/: SKILL.md
skills/django-ci/: SKILL.md
skills/django-deploy/: SKILL.md
skills/django-docker/: SKILL.md
(+13 files in other folders)
