[project]
name = "future-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "drf-nested-routers>=0.94.1",
    "pydantic>=2.12.5",
    "pytest-django>=4.12.0",
    "python-decouple>=3.8",
    "python-ulid>=3.1.0",
    "ruff>=0.15.8",
    "svcs>=25.1.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.2",
    "freezegun>=1.5.5",
    "pyrefly>=0.59.0",
    "pytest-mock>=3.15.1",
]

[tool.pyrefly]
python-version = "3.14"
project-includes = ["src"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
python_files = ["test_*.py"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: deselect with '-m \"not slow\"'",
]
